Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85409

QLocale: numbers output with wrong code points when using Suzhou numerals

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.x
    • 5.12.5
    • Core: Locales (i18n)
    • None
    • Windows
    • 3
    • d8538163075a2058f110bc77e7d481ef1ab7612c (qt/qtbase/dev)
    • Qt6_Foundation_ Sprint 13

      System is configured to use Suzhou numerals as custom standard digits.

      QLocale::system().toString(50) generates the following codepoints

      U+300C U+3007

      The correct sequency would be

      U+3025 U+3007

      (see also https://en.wikipedia.org/wiki/Suzhou_numerals)

       

      The problem seems to be, that the digits for 0-9 are not consecutive starting at U+3007.

      Instead 1-9 are located starting at U+3021.

        For Gerrit Dashboard: QTBUG-85409
        # Subject Branch Project Status CR V

            Eddy Edward Welbourne
            mfauster Markus Fauster
            Maurice Kalinowski Maurice Kalinowski
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes